<resources>
    <string name="app_name">Data Siswa</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_">Welcome,</string>

    <string name="sign_in_to_">sign in to continue</string>
    <string name="create_acco">Create account ?</string>
    <string name="nama">Name</string>
    <string name="alamat">Address</string>
    <string name="no_telp">No telp</string>
    <string name="jenis_kelamin">Jenis kelamin :</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

</resources>
